manifests/01_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: workshop
  labels:
    environment: learning
