manifests/05_db_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: workshop
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
