manifests/07_app_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: workshop
spec:
  selector:
    app: web-app
  ports:
  - port: 80
    targetPort: 80
  type: NodePort
